Fixed issue with player with ind 3 and victories now are remaining after death